control-plane/custom-gateway-api/conformance/tests/gateway-observed-generation-bump.yaml
apiVersion: consul.networking.io/v1beta1
kind: Gateway
metadata:
  name: gateway-observed-generation-bump
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
